--- a/keycloak/themes/haven/login/messages/messages_en.properties
+++ b/keycloak/themes/haven/login/messages/messages_en.properties
@@ -2,3 +2,7 @@ errorTitle=We''re sorry...
 errorTitleHtml=We''re sorry ...
 backToApplication=Back to Application
 backToLogin=Back to Login
+
+termsTitle=Terms and Conditions
+termsText=<p>These are the Custom Terms and conditions to be defined</p>
+termsPlainText=These are the Plain Text Terms and conditions to be defined.
