--- a/keycloak/themes/haven/login/messages/messages_en.properties
+++ b/keycloak/themes/haven/login/messages/messages_en.properties
@@ -2,3 +2,4 @@ errorTitle=We''re sorry...
 errorTitleHtml=We''re sorry ...
 backToApplication=Back to Application
 backToLogin=Back to Login
+doRegister=Validate credit card
