Adding links to Terms and Privacy pages. Signed-off-by: Kevin N. Murphy <knmurphy@users.noreply.github.com>

--- a/keycloak/themes/haven/login/messages/messages_en.properties
+++ b/keycloak/themes/haven/login/messages/messages_en.properties
@@ -4,5 +4,5 @@ backToApplication=Back to Application
 backToLogin=Back to Login
 
 termsTitle=Terms and Conditions
-termsText=<p>These are the Custom Terms and conditions to be defined</p>
+termsText=<p>Please accept these <a target="_blank" href="/#/terms">Terms and Conditions</a> and <a target="_blank" href="/#/privacy">Privacy Policy</a>.</p>
 termsPlainText=These are the Plain Text Terms and conditions to be defined.
