--- a/worker/presentation.Rmd
+++ b/worker/presentation.Rmd
@@ -12,20 +12,20 @@ library(extrafont)
 extrafont::font_import(pattern = 'Roboto', prompt=FALSE)
 extrafont::loadfonts(device="pdf")
 extrafont::loadfonts(device="postscript")
-#library(gridExtra)
+library(gridExtra)
 library(tufte)
 library(ggradar)
 library(ggplot2)
 library(ggthemes)
 library(reshape2)
 library(plyr)
-# library(cowplot)
+library(cowplot)
 library(jsonlite)
 suppressPackageStartupMessages(library(dplyr))
 library(scales)
 library(tibble)
 library(stringr)
-# library(likert)
+library(likert)
 library(RColorBrewer)
 
 knitr::opts_chunk$set(tidy = FALSE, cache.extra = packageVersion('tufte'))
