Don't load Roboto font so we can use smaller rstudio image
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/worker/presentation.Rmd
+++ b/worker/presentation.Rmd
@@ -9,7 +9,7 @@ params:
 
 ```{r setup, include=FALSE}
 library(extrafont)
-extrafont::font_import(pattern = 'Roboto', prompt=FALSE)
+#extrafont::font_import(pattern = 'Roboto', prompt=FALSE)
 extrafont::loadfonts(device="pdf")
 extrafont::loadfonts(device="postscript")
 library(gridExtra)
